# MicroPython_MLX90393

./: .readthedocs.yaml  README.rst  examples.json  package.json  pyproject.toml
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  requirements.txt
examples/: micropython_mlx90393_simpletest.py
micropython_mlx90393/: mlx90393.py
