# SPDX-FileCopyrightText: Copyright (c) 2023 Jose D. Montoya
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "micropython-mlx90393"
description = "MicroPython Driver for the MLX90393 Sensor"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Jose D. Montoya", email = "mlx90393@mailmeto.mozmail.com"}
]
urls = {Homepage = "https://github.com/jposada202020/MicroPython_MLX90393"}
keywords = [
    "micropython",
    "micropython_mlx90393",
    "MicroPython",
    "Sensor",
    "Magnetic",
    "magnetometer",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: MicroPython",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["micropython_mlx90393"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
